<?xml version="1.0"?>
<package format="2">
  <name>oled_display</name>
  <version>0.0.0</version>
  <description>OLED Display</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>Adafruit_SSD1306</exec_depend>

  <export></export>
</package>